[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Peter Hillerström <peter.hillerstrom@gmail.com>"]
edition = "2018"
default-run = "cryptopals"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
ordered-float = "2.0.0"

[[bin]]
name = "cryptopals"
path = "src/main.rs"

[[bin]]
name = "letter_frequencies"
path = "src/bin/letter_frequencies.rs"

# Set 1

[[bin]]
name = "s1c1"
path = "src/bin/set1/ch1.rs"

[[bin]]
name = "s1c2"
path = "src/bin/set1/ch2.rs"

[[bin]]
name = "s1c3"
path = "src/bin/set1/ch3.rs"

[[bin]]
name = "s1c4"
path = "src/bin/set1/ch4.rs"

[[bin]]
name = "s1c5"
path = "src/bin/set1/ch5.rs"
